# todo_phase1

./: README.md
Phase_I/: CLAUDE.md  README.md  TESTING_GUIDE.md  demo_phase1.py  pyproject.toml  requirements.txt  run_app.py  skills.md  sp.constitution  test_phase1.py
Phase_I/specs/: phase1-architecture.md  phase1-spec.md
Phase_I/specs/phase1-features/: console-interface.md  task-crud.md
Phase_I/src/: main.py
Phase_I/src/cli/: console.py
Phase_I/src/hackathon_todo.egg-info/: PKG-INFO  SOURCES.txt
Phase_I/src/models/: task.py
Phase_I/src/services/: task_service.py
